# Real-time-Stock-Watchlist-News-Aggregator

./: .gitignore  CMakeLists.txt  app.js  index.html  main.cpp  readme.md  style.css
backend/: CMakeLists.txt  main.cpp
frontend/: app.js  index.html  style.css
